--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+.env
+.DS_Store
+.idea
+.idea/*
+*.swp
+*.tmp
+*.bak
+composer.lock
+Thumbs.db
